Fix CSD min and max buttons invisible on hover
Gives min, max and close buttons the same bg color (light gray) as the
New Tab button on hover. Setting the color to be the same as when not
hovering was necessary, otherwise min and max will have dark fg color.
Unclear if that's due to my mistake, but I like this solution.

--- a/.config/custom_css/firefox/userChrome.css
+++ b/.config/custom_css/firefox/userChrome.css
@@ -21,6 +21,13 @@
     display: none !important;
 }
 
+/* Fix min and max buttons invisible on hover */
+/* Also makes close button look the same on hover, rather than red bg color */
+.titlebar-button:hover {
+    background-color: #484746 !important;
+    color: #f9f2ee !important;
+}
+
 /* ADDRESS BAR */
 
 /* Hide "Search with Google or enter address" */
